Working on resolving project errors

--- a/smart_dashboard/trunk/extensions/camera/WPICameraExtension/nbproject/private/private.properties
+++ b/smart_dashboard/trunk/extensions/camera/WPICameraExtension/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=false
 do.depend=false
 do.jar=true
+file.reference.SmartDashboard.jar=C:\\Users\\Ken\\Documents\\Dashboard14\\SmartDashboard.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Mitchell Wills\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\Ken\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
