--- a/smart_dashboard/trunk/extensions/camera/WPICameraExtension/nbproject/project.properties
+++ b/smart_dashboard/trunk/extensions/camera/WPICameraExtension/nbproject/project.properties
@@ -30,18 +30,25 @@ excludes=
 file.reference.javacpp.jar=lib/javacpp.jar
 file.reference.javacv-windows-x86.jar=lib/javacv-windows-x86.jar
 file.reference.javacv.jar=lib/javacv.jar
+file.reference.smartdashboard-desktop-lib=../../../smartdashboard/desktop-lib
+file.reference.smartdashboard-lib=../../../smartdashboard/lib
 file.reference.SmartDashboard.jar=lib/SmartDashboard.jar
+file.reference.WPIJavaCV-lib=C:\\Users\\Ken\\Documents\\Dashboard14\\smart_dashboard\\trunk\\WPIJavaCV\\lib
 file.reference.WPIJavaCV.jar=lib/WPIJavaCV.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.WPIJavaCV.jar}:\
     ${file.reference.SmartDashboard.jar}:\
+    ${file.reference.WPIJavaCV-lib}:\
+    ${file.reference.WPIJavaCV.jar}:\
     ${file.reference.javacpp.jar}:\
     ${file.reference.javacv-windows-x86.jar}:\
-    ${file.reference.javacv.jar}
+    ${file.reference.javacv.jar}:\
+    ${file.reference.smartdashboard-desktop-lib}:\
+    ${file.reference.smartdashboard-lib}:\
+    ${reference.SmartDashboard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,6 +88,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.SmartDashboard=../../../smartdashboard
+reference.SmartDashboard.jar=${project.SmartDashboard}/dist/SmartDashboard.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
