--- a/Dashboard14Widgets/nbproject/project.properties
+++ b/Dashboard14Widgets/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Dashboard14Widgets
+application.vendor=Patrick
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,8 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Dashboard14Widgets.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.SmartDashboard.jar=..\\SmartDashboard.jar
+file.reference.SmartDashboard.jar=../SmartDashboard.jar
 includes=**
 jar.compress=false
 javac.classpath=\
