Another try at .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /Dashboard14Widgets/nbproject/private/
 /Dashboard14Widgets/build/
 /Dashboard14Widgets/dist/
-/CameraExtension/nbproject/private/
-/CameraExtension/build/
-/CameraExtension/dist/
+CameraExtension/nbproject/private/
+CameraExtension/build/
+CameraExtension/dist/
