Another pass at gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /Dashboard14Widgets/build/
 /Dashboard14Widgets/dist/
 CameraExtension/nbproject/private/
-CameraExtension/build/
-CameraExtension/dist/
+CameraExtension/build
+CameraExtension/dist
