updated robofile (green only) untested
untested because i didn't have the target. still need to change counts
needed to make it hot from visionextension. also now able to run from
netbeans

--- a/CameraExtension/nbproject/project.properties
+++ b/CameraExtension/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
-dist.dir=dist
+dist.dir=../Extensions
 dist.jar=${dist.dir}/CameraExtension.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
@@ -57,6 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+main.class=edu.wpi.first.smartdashboard.main
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
